--- a/KPK_CalcSite/Views/SnowLoads/CylindricalRoofResult.cshtml
+++ b/KPK_CalcSite/Views/SnowLoads/CylindricalRoofResult.cshtml
@@ -9,15 +9,25 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            @Html.Partial("_BuildingSiteResult", Model.BuildingData)
+            @if (Request.IsAuthenticated)
+            {
+                @Html.Partial("_BuildingSiteResult", Model.BuildingData)
+            }
+            else
+            {
+                <h4><a href="@Url.Action("Login", "Account", routeValues: null)">Login</a> to see more details.</h4>
+            }
         </div>
         <div class="col-md-6">
-            <ul>
-                <li><strong>Width:</strong> @Model.CylindricalRoof.Width m</li>
-                <li><strong>Height:</strong> @Model.CylindricalRoof.Height m</li>
-                <li><strong>Drift length:</strong> @Math.Round(Model.CylindricalRoof.DriftLength, 3) m</li>
-                <li><strong>Shape coefficient:</strong> @Math.Round(Model.CylindricalRoof.ShapeCoefficient, 3)</li>
-            </ul>  
+            @if (Request.IsAuthenticated)
+            {
+                <ul>
+                    <li><strong>Width:</strong> @Model.CylindricalRoof.Width m</li>
+                    <li><strong>Height:</strong> @Model.CylindricalRoof.Height m</li>
+                    <li><strong>Drift length:</strong> @Math.Round(Model.CylindricalRoof.DriftLength, 3) m</li>
+                    <li><strong>Shape coefficient:</strong> @Math.Round(Model.CylindricalRoof.ShapeCoefficient, 3)</li>
+                </ul>
+            }
             <h3>Snow load on roof:</h3>
             <ul>
                 @for (int i = 0; i < Model.CylindricalRoof.RoofCasesSnowLoad.Count; i++)
@@ -27,11 +37,11 @@
                     </li>
                 }
             </ul>
-                <a href="@Url.Action("Calculator", "SnowLoads")">
-            <div class="snow-load-case">
+            <a href="@Url.Action("Calculator", "SnowLoads")">
+                <div class="snow-load-case">
                     <img class="snow-load-link" src="~/Content/Images/SnowLoads/CylindricalRoof.png" alt="Cylindrical Roof" />
-            </div>
-                </a>
+                </div>
+            </a>
         </div>
     </div>
 </div>
