--- a/KPK_CalcSite/Views/SnowLoads/ExceptionalMultispanRoofResult.cshtml
+++ b/KPK_CalcSite/Views/SnowLoads/ExceptionalMultispanRoofResult.cshtml
@@ -9,27 +9,40 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            @Html.Partial("_BuildingSiteResult", Model.BuildingData)
+            @if (Request.IsAuthenticated)
+            {
+                @Html.Partial("_BuildingSiteResult", Model.BuildingData)
+            }
+            else
+            {
+                <h4><a href="@Url.Action("Login", "Account", routeValues: null)">Login</a> to see more details.</h4>
+            }
         </div>
         <div class="col-md-6">
-            <h3>Roof geometry:</h3>
-            <ul>
-                <li><strong>Left drift length:</strong> @Model.ExceptionalMultispanRoof.LeftDriftLength m</li>
-                <li><strong>Right drift length:</strong> @Model.ExceptionalMultispanRoof.RightDriftLength m</li>
-                <li><strong>Dimension of three slopes:</strong> @Math.Round(Model.ExceptionalMultispanRoof.HorizontalDimensionOfThreeSlopes, 3) m</li>
-                <li><strong>Height:</strong> @Math.Round(Model.ExceptionalMultispanRoof.HeightInTheLowestPart, 3) m</li>
-            </ul>
-            <h3>Right Roof:</h3>
-            <ul>
-                <li><strong>Shape coefficient:</strong> @Math.Round(Model.ExceptionalMultispanRoof.ShapeCoefficient, 3)</li>
-                <li class="score"><strong>Snow load on roof:</strong> @Math.Round(Model.ExceptionalMultispanRoof.SnowLoad, 3) kN/m<sup>2</sup></li>
-            </ul>
+            @if (Request.IsAuthenticated)
+            {
+                <h3>Roof geometry:</h3>
+                <ul>
+                    <li><strong>Left drift length:</strong> @Model.ExceptionalMultispanRoof.LeftDriftLength m</li>
+                    <li><strong>Right drift length:</strong> @Model.ExceptionalMultispanRoof.RightDriftLength m</li>
+                    <li><strong>Dimension of three slopes:</strong> @Math.Round(Model.ExceptionalMultispanRoof.HorizontalDimensionOfThreeSlopes, 3) m</li>
+                    <li><strong>Height:</strong> @Math.Round(Model.ExceptionalMultispanRoof.HeightInTheLowestPart, 3) m</li>
+                </ul>
+            }
+                <h3>Roof:</h3>
+                <ul>
+                    @if (Request.IsAuthenticated)
+                    {
+                        <li><strong>Shape coefficient:</strong> @Math.Round(Model.ExceptionalMultispanRoof.ShapeCoefficient, 3)</li>
+                    }
+                    <li class="score"><strong>Snow load on roof:</strong> @Math.Round(Model.ExceptionalMultispanRoof.SnowLoad, 3) kN/m<sup>2</sup></li>
+                </ul>
 
                 <a href="@Url.Action("Calculator", "SnowLoads")">
-            <div class="snow-load-case">
-                    <img class="snow-load-link" src="~/Content/Images/SnowLoads/ExceptionalMultispanRoof.png" alt="Exceptional Multispan Roof" />
-            </div>
+                    <div class="snow-load-case">
+                        <img class="snow-load-link" src="~/Content/Images/SnowLoads/ExceptionalMultispanRoof.png" alt="Exceptional Multispan Roof" />
+                    </div>
                 </a>
-        </div>
+            </div>
     </div>
 </div>
