--- a/KPK_CalcSite/Views/SnowLoads/ExceptionalObstructionOnPitchedOrCurvedRoofResult.cshtml
+++ b/KPK_CalcSite/Views/SnowLoads/ExceptionalObstructionOnPitchedOrCurvedRoofResult.cshtml
@@ -10,23 +10,33 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            @Html.Partial("_BuildingSiteResult", Model.BuildingData)
+            @if (Request.IsAuthenticated)
+            {
+                @Html.Partial("_BuildingSiteResult", Model.BuildingData)
+            }
+            else
+            {
+                <h4><a href="@Url.Action("Login", "Account", routeValues: null)">Login</a> to see more details.</h4>
+            }
         </div>
         <div class="col-md-6">
-            <h3>Roof geometry:</h3>
-            <ul>
-                <li><strong>Left side width:</strong> @Model.ExceptionalObstructionOnPitchedOrCurvedRoof.LeftWidth m</li>
-                <li><strong>Left height difference:</strong> @Model.ExceptionalObstructionOnPitchedOrCurvedRoof.LeftHeightDifference m</li>
-                <li><strong>Left drift length:</strong> @Model.ExceptionalObstructionOnPitchedOrCurvedRoof.LeftDriftLength m</li>
-                <li><strong>Right side width:</strong> @Math.Round(Model.ExceptionalObstructionOnPitchedOrCurvedRoof.RightWidth, 3) m</li>
-                <li><strong>Right height difference:</strong> @Model.ExceptionalObstructionOnPitchedOrCurvedRoof.RightHeightDifference m</li>
-                <li><strong>Right drift length:</strong> @Math.Round(Model.ExceptionalObstructionOnPitchedOrCurvedRoof.RightDriftLength, 3) m</li>
-            </ul>
-            <h3>Coefficients:</h3>
-            <ul>
-                <li><strong>Left shape coefficient:</strong> @Math.Round(Model.ExceptionalObstructionOnPitchedOrCurvedRoof.LeftShapeCoefficient, 3)</li>
-                <li><strong>Right shape coefficient:</strong> @Math.Round(Model.ExceptionalObstructionOnPitchedOrCurvedRoof.RightShapeCoefficient, 3)</li>
-            </ul>
+            @if (Request.IsAuthenticated)
+            {
+                <h3>Roof geometry:</h3>
+                <ul>
+                    <li><strong>Left side width:</strong> @Model.ExceptionalObstructionOnPitchedOrCurvedRoof.LeftWidth m</li>
+                    <li><strong>Left height difference:</strong> @Model.ExceptionalObstructionOnPitchedOrCurvedRoof.LeftHeightDifference m</li>
+                    <li><strong>Left drift length:</strong> @Model.ExceptionalObstructionOnPitchedOrCurvedRoof.LeftDriftLength m</li>
+                    <li><strong>Right side width:</strong> @Math.Round(Model.ExceptionalObstructionOnPitchedOrCurvedRoof.RightWidth, 3) m</li>
+                    <li><strong>Right height difference:</strong> @Model.ExceptionalObstructionOnPitchedOrCurvedRoof.RightHeightDifference m</li>
+                    <li><strong>Right drift length:</strong> @Math.Round(Model.ExceptionalObstructionOnPitchedOrCurvedRoof.RightDriftLength, 3) m</li>
+                </ul>
+                <h3>Coefficients:</h3>
+                <ul>
+                    <li><strong>Left shape coefficient:</strong> @Math.Round(Model.ExceptionalObstructionOnPitchedOrCurvedRoof.LeftShapeCoefficient, 3)</li>
+                    <li><strong>Right shape coefficient:</strong> @Math.Round(Model.ExceptionalObstructionOnPitchedOrCurvedRoof.RightShapeCoefficient, 3)</li>
+                </ul>
+            }
 
             <h3>Snow loads:</h3>
             <ul>
@@ -34,11 +44,11 @@
                 <li class="score"><strong>Right snow load:</strong> @Math.Round(Model.ExceptionalObstructionOnPitchedOrCurvedRoof.RightSnowLoad, 3) kN/m<sup>2</sup></li>
             </ul>
 
-                <a href="@Url.Action("Calculator", "SnowLoads")">
-            <div class="snow-load-case">
+            <a href="@Url.Action("Calculator", "SnowLoads")">
+                <div class="snow-load-case">
                     <img class="snow-load-link" src="~/Content/Images/SnowLoads/ExceptionalObstructionOnPitchedOrCurvedRoof.png" alt="Exceptional Obstruction On Pitched Or Curved Roof" />
-            </div>
-                </a>
+                </div>
+            </a>
         </div>
     </div>
 </div>
