--- a/KPK_CalcSite/Views/SnowLoads/ExceptionalRoofAbuttingToTallerConstructionResult.cshtml
+++ b/KPK_CalcSite/Views/SnowLoads/ExceptionalRoofAbuttingToTallerConstructionResult.cshtml
@@ -10,35 +10,44 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            @Html.Partial("_BuildingSiteResult", Model.BuildingData)
+            @if (Request.IsAuthenticated)
+            {
+                @Html.Partial("_BuildingSiteResult", Model.BuildingData)
+            }
+            else
+            {
+                <h4><a href="@Url.Action("Login", "Account", routeValues: null)">Login</a> to see more details.</h4>
+            }
         </div>
         <div class="col-md-6">
-            <h3>Roof geometry:</h3>
-            <ul>
-                <li><strong>Upper building width:</strong> @Model.ExceptionalRoofAbuttingToTallerConstruction.UpperBuildingWidth m</li>
-                <li><strong>Lower building width:</strong> @Model.ExceptionalRoofAbuttingToTallerConstruction.LowerBuildingWidth m</li>
-                <li><strong>Height difference:</strong> @Model.ExceptionalRoofAbuttingToTallerConstruction.HeightDifference m</li>
-                <li><strong>Angle:</strong> @Model.ExceptionalRoofAbuttingToTallerConstruction.Angle degrees</li>
-            </ul>
-            <h3>Coefficients:</h3>
-            <ul>
-                <li><strong>Drift length:</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.DriftLength, 3) m</li>
-                <li><strong>Shape coefficient 1:</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.ShapeCoefficient1, 3)</li>
-                <li><strong>Shape coefficient 2:</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.ShapeCoefficient2, 3)</li>
-                <li><strong>Shape coefficient 3:</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.ShapeCoefficient3, 3)</li>
-            </ul>
-
+            @if (Request.IsAuthenticated)
+            {
+                <h3>Roof geometry:</h3>
+                <ul>
+                    <li><strong>Upper building width:</strong> @Model.ExceptionalRoofAbuttingToTallerConstruction.UpperBuildingWidth m</li>
+                    <li><strong>Lower building width:</strong> @Model.ExceptionalRoofAbuttingToTallerConstruction.LowerBuildingWidth m</li>
+                    <li><strong>Height difference:</strong> @Model.ExceptionalRoofAbuttingToTallerConstruction.HeightDifference m</li>
+                    <li><strong>Angle:</strong> @Model.ExceptionalRoofAbuttingToTallerConstruction.Angle degrees</li>
+                </ul>
+                <h3>Coefficients:</h3>
+                <ul>
+                    <li><strong>Drift length:</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.DriftLength, 3) m</li>
+                    <li><strong>Shape coefficient 1:</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.ShapeCoefficient1, 3)</li>
+                    <li><strong>Shape coefficient 2:</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.ShapeCoefficient2, 3)</li>
+                    <li><strong>Shape coefficient 3:</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.ShapeCoefficient3, 3)</li>
+                </ul>
+            }
             <h3>Snow loads:</h3>
             <ul>
                 <li class="score"><strong>Snow load on roof (near the top):</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.SnowLoadNearTheTop, 3) kN/m<sup>2</sup></li>
                 <li class="score"><strong>Snow load on roof (closer to the edge):</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.SnowLoadNearTheEdge, 3) kN/m<sup>2</sup></li>
             </ul>
 
-                <a href="@Url.Action("Calculator", "SnowLoads")">
-            <div class="snow-load-case">
+            <a href="@Url.Action("Calculator", "SnowLoads")">
+                <div class="snow-load-case">
                     <img class="snow-load-link" src="~/Content/Images/SnowLoads/ExceptionalRoofAbuttingToTallerConstruction.png" alt="Exceptional Roof Abutting To Taller Construction" />
-            </div>
-                </a>
+                </div>
+            </a>
         </div>
     </div>
 </div>
