--- a/KPK_CalcSite/Views/SnowLoads/SnowOverhangingResult.cshtml
+++ b/KPK_CalcSite/Views/SnowLoads/SnowOverhangingResult.cshtml
@@ -10,20 +10,29 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                @Html.Partial("_BuildingSiteResult", Model.BuildingData)
-                <ul>
-                    <li><strong>Snow density:</strong> @Model.SnowOverhanging.Building.SnowLoad.SnowDensity kN/m<sup>3</sup></li>
-                </ul>
+                @if (Request.IsAuthenticated)
+                {
+                    @Html.Partial("_BuildingSiteResult", Model.BuildingData)
+                    <ul>
+                        <li><strong>Snow density:</strong> @Model.SnowOverhanging.Building.SnowLoad.SnowDensity kN/m<sup>3</sup></li>
+                    </ul>
+                }
+                else
+                {
+                    <h4><a href="@Url.Action("Login", "Account", routeValues: null)">Login</a> to see more details.</h4>
+                }
             </div>
             <div class="col-md-6">
-                <ul>
-                    <li><strong>Snow layer depth:</strong> @Model.SnowOverhanging.SnowLayerDepth m</li>
-                    <li><strong>Snow load on roof:</strong> @Model.SnowOverhanging.SnowLoadOnRoofValue kN/m<sup>3</sup></li>
-                    <li>
-                        <strong>Shape coefficient:</strong> @Math.Round(Model.SnowOverhanging.IrregularShapeCoefficient, 3)
-                    </li>
-                </ul>
-
+                @if (Request.IsAuthenticated)
+                {
+                    <ul>
+                        <li><strong>Snow layer depth:</strong> @Model.SnowOverhanging.SnowLayerDepth m</li>
+                        <li><strong>Snow load on roof:</strong> @Model.SnowOverhanging.SnowLoadOnRoofValue kN/m<sup>3</sup></li>
+                        <li>
+                            <strong>Shape coefficient:</strong> @Math.Round(Model.SnowOverhanging.IrregularShapeCoefficient, 3)
+                        </li>
+                    </ul>
+                }
 
                 <h3>Snow load on roof:</h3>
                 <ul>
@@ -32,11 +41,11 @@
                     </li>
                 </ul>
 
-                    <a href="@Url.Action("Calculator", "SnowLoads")">
-                <div class="snow-load-case">
+                <a href="@Url.Action("Calculator", "SnowLoads")">
+                    <div class="snow-load-case">
                         <img class="snow-load-link" src="~/Content/Images/SnowLoads/SnowOverhanging.png" alt="Snow Overhanging" />
-                </div>
-                    </a>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
