--- a/KPK_CalcSite/Views/SnowLoads/SnowguardsResult.cshtml
+++ b/KPK_CalcSite/Views/SnowLoads/SnowguardsResult.cshtml
@@ -10,15 +10,24 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            @Html.Partial("_BuildingSiteResult", Model.BuildingData)
+            @if (Request.IsAuthenticated)
+            {
+                @Html.Partial("_BuildingSiteResult", Model.BuildingData)
+            }
+            else
+            {
+                <h4><a href="@Url.Action("Login", "Account", routeValues: null)">Login</a> to see more details.</h4>
+            }
         </div>
         <div class="col-md-6">
-            <ul>
-                <li><strong>Roof width:</strong> @Model.Snowguards.Width m</li>
-                <li><strong>Slope:</strong> @Model.Snowguards.Slope degrees</li>
-                <li><strong>Snow load on roof:</strong> @Model.Snowguards.SnowLoadOnRoofValue kN/m<sup>3</sup></li>
-            </ul>
-
+            @if (Request.IsAuthenticated)
+            {
+                <ul>
+                    <li><strong>Roof width:</strong> @Model.Snowguards.Width m</li>
+                    <li><strong>Slope:</strong> @Model.Snowguards.Slope degrees</li>
+                    <li><strong>Snow load on roof:</strong> @Model.Snowguards.SnowLoadOnRoofValue kN/m<sup>3</sup></li>
+                </ul>
+            }
 
             <h3>Snow load on roof:</h3>
             <ul>
@@ -27,11 +36,11 @@
                 </li>
             </ul>
 
-                <a href="@Url.Action("Calculator", "SnowLoads")">
-            <div class="snow-load-case">
+            <a href="@Url.Action("Calculator", "SnowLoads")">
+                <div class="snow-load-case">
                     <img class="snow-load-link" src="~/Content/Images/SnowLoads/Snowguards.png" alt="Snowguards" />
-            </div>
-                </a>
+                </div>
+            </a>
         </div>
     </div>
 </div>
