--- a/Build_IT_Web/ClientApp/app/components/script-calculator/script-calculator.component.html
+++ b/Build_IT_Web/ClientApp/app/components/script-calculator/script-calculator.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="text-center">
-    <select [(ngModel)]="selectedScript" class="text-center">
+    <select [(ngModel)]="selectedScript" (change)="onChange()" class="text-center">
         <option *ngFor="let script of scripts"
                 [ngValue]="script">
             {{script.name }}
@@ -20,20 +20,9 @@
             {{tag.name}}
         </li>
     </ul>
-</div>
+    <p *ngIf="!parameters"><em>Loading...</em></p>
 
-
-
-<!--<div *ngIf="selectedScript">
-    <h1>{{selectedScript.name}}</h1>
-    <p>{{selectedScript.description}}</p>
-    <ul>
-        <li *ngFor="let tag of selectedScript.tags">{{tag}}</li>
-    </ul>
-
-    <p *ngIf="!selectedScript.parameters"><em>Loading...</em></p>
-
-    <table class='table' *ngIf="selectedScript.parameters">
+    <table class='table' *ngIf="parameters">
         <thead>
             <tr>
                 <th>Name</th>
@@ -43,7 +32,43 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let parameter of selectedScript.parameters">
+            <tr *ngFor="let parameter of parameters">
+                <td [innerHTML]="parameter.name | html"></td>
+                <td>
+                    <div *ngIf="parameter.context % (2 * parameterOptions.Editable) >= parameterOptions.Editable">
+                        <input *ngIf="parameter.valueOptions.length == 0"
+                               [(ngModel)]="parameter.value"
+                               placeholder="value" 
+                               (change)="setValueChanged()"/>
+                        <select *ngIf="parameter.valueOptions.length > 0"
+                                [(ngModel)]="parameter.value"
+                                (change)="setValueChanged()">
+                            <option *ngFor="let valueOption of parameter.valueOptions">
+                                {{valueOption.value }}
+                            </option>
+                        </select>
+                    </div>
+                    <span *ngIf="parameter.context % (2 * parameterOptions.Calculation) >= parameterOptions.Calculation">{{parameter.value }}</span>
+                </td>
+                <td [innerHTML]="parameter.unit | html"></td>
+                <td>{{ parameter.description }}</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <button (click)="calculate()">Calculate</button>
+
+    <table class='table' *ngIf="resultParameters && !valueChanged">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Value</th>
+                <th>Unit</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let parameter of resultParameters">
                 <td [innerHTML]="parameter.name | html"></td>
                 <td>
                     <div *ngIf="parameter.context % (2 * parameterOptions.Editable) >= parameterOptions.Editable">
@@ -64,6 +89,4 @@
             </tr>
         </tbody>
     </table>
-
-    <button (click)="calculate()">Calculate</button>
-</div>-->
+</div>
